# suvtools

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  __init__.py  docusaurus.config.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  search-index.json  sidebars.js  sitemap.xml  test.py  tests.py
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: publish.yml  python-tests.yml
assets/css/: styles.044bc31d.css  styles.05d339d4.css  styles.06277ce3.css  styles.0da4c800.css  styles.217becd8.css  styles.25ef95d1.css  styles.2a1daea6.css  styles.2a74bc3d.css  styles.317d91dc.css  styles.31ed1c9a.css  styles.34a42325.css  styles.3627c6f5.css  styles.3bb977f8.css  styles.3ed51958.css  styles.45cb933e.css  styles.49d612ef.css  styles.4e98345b.css  styles.4fd7b56f.css  styles.565cb052.css  styles.5752d856.css  styles.5a0095bc.css  styles.5d6bdd0b.css  styles.5f3e31b4.css  styles.5ff162e4.css  styles.618388e3.css  styles.64e85030.css  styles.6696c9ff.css  styles.6ee41610.css  styles.73386ffa.css  styles.772eb7e1.css  styles.7a3311bd.css  styles.7c2eba46.css  styles.813960d1.css  styles.879871a9.css  styles.8a92e382.css  styles.94a6e17b.css  styles.965c0020.css  styles.a464e540.css  styles.a612876c.css  styles.a7244f56.css  (+19 more)
assets/js/: 09d5ad39.48d88824.js  09d5ad39.56947220.js  09d5ad39.64203f07.js  09d5ad39.6fa4947a.js  09d5ad39.741ac1cf.js  09d5ad39.7c6b51f3.js  09d5ad39.9864f15f.js  09d5ad39.b84d5c7d.js  09d5ad39.bd05beb4.js  09d5ad39.d48ccd4d.js  09d5ad39.e01f9675.js  09d5ad39.eb18ad78.js  10.87f2cab1.js  138e0e15.4bd9cb53.js  138e0e15.55c8a505.js  138e0e15.c133ae35.js  138e0e15.cd0f2957.js  138e0e15.cd6c24ea.js  17896441.0fbeca03.js  17896441.183e03d9.js  17896441.1bc88c97.js  17896441.2615fd08.js  17896441.2ecd3ae7.js  17896441.356bfbb2.js  17896441.4307dcef.js  17896441.4383b285.js  17896441.443cac9a.js  17896441.57351cd4.js  17896441.57c65a0b.js  17896441.6266c649.js  17896441.6394a838.js  17896441.7f6e2a75.js  17896441.7f96bdf7.js  17896441.88cb8e4b.js  17896441.9ed2f49d.js  17896441.a1cfd657.js  17896441.a594381e.js  17896441.b48d972d.js  17896441.c3fb2b44.js  17896441.c9cb1789.js  (+386 more)
blog/: index.html
dataset/: sample_data.txt
docs/: examples.md  getting-started.md  getting_started.md  glossary.md  gs.md  hands-on.md  index.html  index.md  license.md  modules.md
docs/examples/: index.html
docs/glossary/: index.html
docs/hands-on/: index.html
docs/license/: index.html
notebooks/: plots.ipynb
search/: index.html
src/: calc_area.py  fit_gauss.py  fit_lorentz.py  load.py  lock_peak.py  norm_bg.py  save_csv.py
src/css/: custom.css
src/pages/: index.js
src/suvtools/: __init__.py  calc_area.py  fit_gauss.py  fit_lorentz.py  load.py  lock_peak.py  norm_bg.py  save_csv.py
tests/: tests.py
