[project]
name = "suvtools"
version = "1.0.3"
description = "Python library for analyzing and visualizing SSLS SUV Beamline data."
authors = [{ name = "Pranab Das" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
keywords = [
    "python", "data-analysis", "matplotlib", "materials-science",
    "condensed-matter-physics"
]

dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
lint = [
    "autopep8>=2.3.1",
]

notebook = [
    "jupyterlab>=4.3.4",
]

test = [
    "psutil>=6.1.1",
]

[project.urls]
homepage = "https://pranabdas.github.io/suvtools/"
repository = "https://github.com/pranabdas/suvtools"
documentation = "https://pranabdas.github.io/suvtools/docs/"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
