[project]
name = "suvtools"
version = "1.2.0"
description = "Python library for analyzing and visualizing SSLS SUV Beamline data."
authors = [{ name = "Pranab Das" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
keywords = [
    "condensed-matter-physics",
    "data-analysis",
    "materials-science",
    "matplotlib",
    "python",
]

dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
lint = [
    "autopep8>=2.3.2",
]

notebook = [
    "jupyterlab>=4.4.5",
]

[project.urls]
homepage = "https://pranabdas.github.io/suvtools/"
repository = "https://github.com/pranabdas/suvtools"
documentation = "https://pranabdas.github.io/suvtools/docs/"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
